all errors gone