@@ -1,5 +1,7 @@
 package net.journey.entity.mob.pet;
 
+import java.util.UUID;
+
 import com.google.common.base.Predicate;
 
 import net.journey.enums.EnumSounds;
@@ -8,7 +10,7 @@ import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityAgeable;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.ai.EntityAIBeg;
+import net.minecraft.entity.ai.EntityAIAttackMelee;
 import net.minecraft.entity.ai.EntityAIFollowOwner;
 import net.minecraft.entity.ai.EntityAIHurtByTarget;
 import net.minecraft.entity.ai.EntityAILeapAtTarget;
@@ -20,6 +22,7 @@ import net.minecraft.entity.ai.EntityAIOwnerHurtTarget;
 import net.minecraft.entity.ai.EntityAISwimming;
 import net.minecraft.entity.ai.EntityAITargetNonTamed;
 import net.minecraft.entity.ai.EntityAIWander;
+import net.minecraft.entity.ai.EntityAIWanderAvoidWater;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.monster.EntityCreeper;
 import net.minecraft.entity.monster.EntityGhast;
@@ -28,41 +31,50 @@ import net.minecraft.entity.passive.EntityAnimal;
 import net.minecraft.entity.passive.EntityHorse;
 import net.minecraft.entity.passive.EntityRabbit;
 import net.minecraft.entity.passive.EntitySheep;
-import net.minecraft.entity.passive.EntityTameable;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.projectile.EntityArrow;
 import net.minecraft.init.Items;
+import net.minecraft.init.SoundEvents;
 import net.minecraft.item.EnumDyeColor;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemFood;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
-import net.minecraft.pathfinding.PathNavigateGround;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
 import net.minecraft.util.DamageSource;
+import net.minecraft.util.EnumHand;
 import net.minecraft.util.EnumParticleTypes;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
 import net.minecraft.world.World;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 import net.slayer.api.entity.EntityModTameable;
 
-public class EntityShiverwolf extends EntityModTameable
-{
+public class EntityShiverwolf extends EntityModTameable {
+	
     private float headRotationCourse;
     private float headRotationCourseOld;
     private boolean isWet;
     private boolean isShaking;
     private float timeWolfIsShaking;
     private float prevTimeWolfIsShaking;
+    
+    private static final DataParameter<Float> DATA_HEALTH_ID = EntityDataManager.<Float>createKey(EntityShiverwolf.class, DataSerializers.FLOAT);
+    private static final DataParameter<Boolean> BEGGING = EntityDataManager.<Boolean>createKey(EntityShiverwolf.class, DataSerializers.BOOLEAN);
+    private static final DataParameter<Integer> COLLAR_COLOR = EntityDataManager.<Integer>createKey(EntityShiverwolf.class, DataSerializers.VARINT);
 
-    public EntityShiverwolf(World worldIn)
-    {
+    public EntityShiverwolf(World worldIn) {
         super(worldIn);
         this.setSize(0.6F, 0.8F);
-        ((PathNavigateGround)this.getNavigator()).setAvoidsWater(true);
+        this.tasks.addTask(8, new EntityAIWanderAvoidWater(this, 1.0D));
         this.tasks.addTask(1, new EntityAISwimming(this));
         this.tasks.addTask(2, this.aiSit);
         this.tasks.addTask(3, new EntityAILeapAtTarget(this, 0.4F));
-        this.tasks.addTask(4, new EntityAIAttackOnCollide(this, 1.0D, true));
+        this.tasks.addTask(5, new EntityAIAttackMelee(this, 1.0D, true));
         this.tasks.addTask(5, new EntityAIFollowOwner(this, 1.0D, 10.0F, 2.0F));
         this.tasks.addTask(6, new EntityAIMate(this, 1.0D));
         this.tasks.addTask(7, new EntityAIWander(this, 1.0D));
@@ -71,12 +83,10 @@ public class EntityShiverwolf extends EntityModTameable
         this.targetTasks.addTask(1, new EntityAIOwnerHurtByTarget(this));
         this.targetTasks.addTask(2, new EntityAIOwnerHurtTarget(this));
         this.targetTasks.addTask(3, new EntityAIHurtByTarget(this, true, new Class[0]));
-        this.targetTasks.addTask(4, new EntityAITargetNonTamed(this, EntityAnimal.class, false, new Predicate<Entity>()
-        {
+        this.targetTasks.addTask(4, new EntityAITargetNonTamed(this, EntityAnimal.class, false, new Predicate<Entity>() {
             @Override
-			public boolean apply(Entity p_apply_1_)
-            {
-                return p_apply_1_ instanceof EntitySheep || p_apply_1_ instanceof EntityRabbit;
+			public boolean apply(Entity e) {
+                return e instanceof EntitySheep || e instanceof EntityRabbit;
             }
         }));
         this.targetTasks.addTask(5, new EntityAINearestAttackableTarget(this, EntitySkeleton.class, false));
@@ -84,17 +94,13 @@ public class EntityShiverwolf extends EntityModTameable
     }
 
     @Override
-    protected void applyEntityAttributes()
-    {
+    protected void applyEntityAttributes() {
         super.applyEntityAttributes();
         this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.30000001192092896D);
 
-        if (this.isTamed())
-        {
+        if(this.isTamed()) {
             this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(20.0D);
-        }
-        else
-        {
+        } else {
             this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(8.0D);
         }
 
@@ -103,176 +109,160 @@ public class EntityShiverwolf extends EntityModTameable
     }
 
     @Override
-    public void setAttackTarget(EntityLivingBase entitylivingbaseIn)
-    {
+    public void setAttackTarget(EntityLivingBase entitylivingbaseIn) {
         super.setAttackTarget(entitylivingbaseIn);
 
-        if (entitylivingbaseIn == null)
-        {
+        if(entitylivingbaseIn == null) {
             this.setAngry(false);
         }
-        else if (!this.isTamed())
-        {
+        else if(!this.isTamed()) {
             this.setAngry(true);
         }
     }
+    
     @Override
-    protected void updateAITasks()
-    {
-        this.dataWatcher.updateObject(18, Float.valueOf(this.getHealth()));
+    protected void updateAITasks() {
+        this.dataManager.set(DATA_HEALTH_ID, Float.valueOf(this.getHealth()));
     }
+
     @Override
-    protected void entityInit()
-    {
+    protected void entityInit() {
         super.entityInit();
-        this.dataWatcher.addObject(18, new Float(this.getHealth()));
-        this.dataWatcher.addObject(19, new Byte((byte)0));
-        this.dataWatcher.addObject(20, new Byte((byte)EnumDyeColor.RED.getMetadata()));
+        this.dataManager.register(DATA_HEALTH_ID, Float.valueOf(this.getHealth()));
+        this.dataManager.register(BEGGING, Boolean.valueOf(false));
+        this.dataManager.register(COLLAR_COLOR, Integer.valueOf(EnumDyeColor.RED.getDyeDamage()));
     }
+    
     @Override
-    protected void playStepSound(BlockPos pos, Block blockIn)
-    {
-        this.playSound("mob.wolf.step", 0.15F, 1.0F);
+    protected void playStepSound(BlockPos pos, Block blockIn) {
+        this.playSound(SoundEvents.ENTITY_WOLF_STEP, 0.15F, 1.0F);
     }
+    
     @Override
-    public void writeEntityToNBT(NBTTagCompound tagCompound)
-    {
+    public void writeEntityToNBT(NBTTagCompound tagCompound) {
         super.writeEntityToNBT(tagCompound);
         tagCompound.setBoolean("Angry", this.isAngry());
         tagCompound.setByte("CollarColor", (byte)this.getCollarColor().getDyeDamage());
     }
+    
     @Override
-    public void readEntityFromNBT(NBTTagCompound tagCompund)
-    {
+    public void readEntityFromNBT(NBTTagCompound tagCompund) {
         super.readEntityFromNBT(tagCompund);
         this.setAngry(tagCompund.getBoolean("Angry"));
 
-        if (tagCompund.hasKey("CollarColor", 99))
-        {
+        if(tagCompund.hasKey("CollarColor", 99)) {
             this.setCollarColor(EnumDyeColor.byDyeDamage(tagCompund.getByte("CollarColor")));
         }
     }
-    @Override
-    protected String getLivingSound()
-    {
-        return this.isAngry() ? "mob.wolf.growl" : (this.rand.nextInt(3) == 0 ? (this.isTamed() && this.dataWatcher.getWatchableObjectFloat(18) < 10.0F ? "mob.wolf.whine" : "mob.wolf.panting") : "mob.wolf.bark");
+    
+    protected SoundEvent getAmbientSound() {
+        if(this.isAngry()) {
+            return SoundEvents.ENTITY_WOLF_GROWL;
+        }
+        else if(this.rand.nextInt(3) == 0) {
+            return this.isTamed() && ((Float)this.dataManager.get(DATA_HEALTH_ID)).floatValue() < 10.0F ? SoundEvents.ENTITY_WOLF_WHINE : SoundEvents.ENTITY_WOLF_PANT;
+        } else {
+            return SoundEvents.ENTITY_WOLF_AMBIENT;
+        }
     }
-    @Override
-    protected String getHurtSound()
-    {
-        return "mob.wolf.hurt";
+
+    protected SoundEvent getHurtSound(DamageSource damageSourceIn) {
+        return SoundEvents.ENTITY_WOLF_HURT;
     }
-    @Override
-    protected String getDeathSound()
-    {
-        return "mob.wolf.death";
+
+    protected SoundEvent getDeathSound() {
+        return SoundEvents.ENTITY_WOLF_DEATH;
     }
+    
     @Override
-    protected float getSoundVolume()
-    {
+    protected float getSoundVolume() {
         return 0.4F;
     }
+    
     @Override
-    protected Item getDropItem()
-    {
+    protected Item getDropItem() {
         return Item.getItemById(-1);
     }
+    
     @Override
-    public void onLivingUpdate()
-    {
+    public void onLivingUpdate() {
         super.onLivingUpdate();
 
-        if (!this.worldObj.isRemote && this.isWet && !this.isShaking && !this.hasPath() && this.onGround)
-        {
+        if(!this.world.isRemote && this.isWet && !this.isShaking && !this.hasPath() && this.onGround) {
             this.isShaking = true;
             this.timeWolfIsShaking = 0.0F;
             this.prevTimeWolfIsShaking = 0.0F;
-            this.worldObj.setEntityState(this, (byte)8);
+            this.world.setEntityState(this, (byte)8);
         }
 
-        if (!this.worldObj.isRemote && this.getAttackTarget() == null && this.isAngry())
-        {
+        if(!this.world.isRemote && this.getAttackTarget() == null && this.isAngry()) {
             this.setAngry(false);
         }
     }
+    
     @Override
-    public void onUpdate()
-    {
+    public void onUpdate() {
         super.onUpdate();
         this.headRotationCourseOld = this.headRotationCourse;
 
-        if (this.isBegging())
-        {
+        if(this.isBegging()) {
             this.headRotationCourse += (1.0F - this.headRotationCourse) * 0.4F;
-        }
-        else
-        {
+        } else {
             this.headRotationCourse += (0.0F - this.headRotationCourse) * 0.4F;
         }
 
-        if (this.isWet())
-        {
+        if(this.isWet()) {
             this.isWet = true;
             this.isShaking = false;
             this.timeWolfIsShaking = 0.0F;
             this.prevTimeWolfIsShaking = 0.0F;
         }
-        else if ((this.isWet || this.isShaking) && this.isShaking)
-        {
-            if (this.timeWolfIsShaking == 0.0F)
-            {
-                this.playSound("mob.wolf.shake", this.getSoundVolume(), (this.rand.nextFloat() - this.rand.nextFloat()) * 0.2F + 1.0F);
+        else if((this.isWet || this.isShaking) && this.isShaking) {
+            if(this.timeWolfIsShaking == 0.0F) {
+                this.playSound(SoundEvents.ENTITY_WOLF_SHAKE, this.getSoundVolume(), (this.rand.nextFloat() - this.rand.nextFloat()) * 0.2F + 1.0F);
             }
 
             this.prevTimeWolfIsShaking = this.timeWolfIsShaking;
             this.timeWolfIsShaking += 0.05F;
 
-            if (this.prevTimeWolfIsShaking >= 2.0F)
-            {
+            if(this.prevTimeWolfIsShaking >= 2.0F) {
                 this.isWet = false;
                 this.isShaking = false;
                 this.prevTimeWolfIsShaking = 0.0F;
                 this.timeWolfIsShaking = 0.0F;
             }
 
-            if (this.timeWolfIsShaking > 0.4F)
-            {
+            if(this.timeWolfIsShaking > 0.4F) {
                 float f = (float)this.getEntityBoundingBox().minY;
                 int i = (int)(MathHelper.sin((this.timeWolfIsShaking - 0.4F) * (float)Math.PI) * 7.0F);
 
-                for (int j = 0; j < i; ++j)
-                {
+                for (int j = 0; j < i; ++j) {
                     float f1 = (this.rand.nextFloat() * 2.0F - 1.0F) * this.width * 0.5F;
                     float f2 = (this.rand.nextFloat() * 2.0F - 1.0F) * this.width * 0.5F;
-                    this.worldObj.spawnParticle(EnumParticleTypes.WATER_SPLASH, this.posX + f1, (double)(f + 0.8F), this.posZ + f2, this.motionX, this.motionY, this.motionZ, new int[0]);
+                    this.world.spawnParticle(EnumParticleTypes.WATER_SPLASH, this.posX + f1, (double)(f + 0.8F), this.posZ + f2, this.motionX, this.motionY, this.motionZ, new int[0]);
                 }
             }
         }
     }
 
     @SideOnly(Side.CLIENT)
-    public boolean isWolfWet()
-    {
+    public boolean isWolfWet() {
         return this.isWet;
     }
 
     @SideOnly(Side.CLIENT)
-    public float getShadingWhileWet(float f1)
-    {
+    public float getShadingWhileWet(float f1) {
         return 0.75F + (this.prevTimeWolfIsShaking + (this.timeWolfIsShaking - this.prevTimeWolfIsShaking) * f1) / 2.0F * 0.25F;
     }
 
     @SideOnly(Side.CLIENT)
-    public float getShakeAngle(float par1, float par2)
-    {
+    public float getShakeAngle(float par1, float par2) {
         float f = (this.prevTimeWolfIsShaking + (this.timeWolfIsShaking - this.prevTimeWolfIsShaking) * par1 + par2) / 1.8F;
 
-        if (f < 0.0F)
-        {
+        if(f < 0.0F) {
             f = 0.0F;
         }
-        else if (f > 1.0F)
-        {
+        else if(f > 1.0F) {
             f = 1.0F;
         }
 
@@ -280,320 +270,259 @@ public class EntityShiverwolf extends EntityModTameable
     }
 
     @SideOnly(Side.CLIENT)
-    public float getInterestedAngle(float par1)
-    {
+    public float getInterestedAngle(float par1) {
         return (this.headRotationCourseOld + (this.headRotationCourse - this.headRotationCourseOld) * par1) * 0.15F * (float)Math.PI;
     }
+    
     @Override
-    public float getEyeHeight()
-    {
+    public float getEyeHeight() {
         return this.height * 0.8F;
     }
+    
     @Override
-    public int getVerticalFaceSpeed()
-    {
+    public int getVerticalFaceSpeed() {
         return this.isSitting() ? 20 : super.getVerticalFaceSpeed();
     }
 
     @Override
-    public boolean attackEntityFrom(DamageSource source, float amount)
-    {
-        if (this.isEntityInvulnerable(source))
-        {
+    public boolean attackEntityFrom(DamageSource source, float amount) {
+        if(this.isEntityInvulnerable(source)) {
             return false;
-        }
-        else
-        {
-            Entity entity = source.getEntity();
+        } else {
+            Entity entity = source.getImmediateSource();
             this.aiSit.setSitting(false);
 
-            if (entity != null && !(entity instanceof EntityPlayer) && !(entity instanceof EntityArrow))
-            {
+            if(entity != null && !(entity instanceof EntityPlayer) && !(entity instanceof EntityArrow)) {
                 amount = (amount + 1.0F) / 2.0F;
             }
-
             return super.attackEntityFrom(source, amount);
         }
     }
+    
     @Override
-    public boolean attackEntityAsMob(Entity entityIn)
-    {
+    public boolean attackEntityAsMob(Entity entityIn) {
         boolean flag = entityIn.attackEntityFrom(DamageSource.causeMobDamage(this), ((int)this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).getAttributeValue()));
 
-        if (flag)
-        {
+        if(flag) {
             this.applyEnchantments(this, entityIn);
         }
 
         return flag;
     }
+    
     @Override
-    public void setTamed(boolean tamed)
-    {
+    public void setTamed(boolean tamed) {
         super.setTamed(tamed);
 
-        if (tamed)
-        {
+        if(tamed) {
             this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(20.0D);
-        }
-        else
-        {
+        } else {
             this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(8.0D);
         }
-
         this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue(4.0D);
     }
+    
     @Override
-    public boolean interact(EntityPlayer player)
-    {
-        ItemStack itemstack = player.inventory.getCurrentItem();
+    public boolean processInteract(EntityPlayer player, EnumHand hand) {
+    	ItemStack itemstack = player.inventory.getCurrentItem();
 
-        if (this.isTamed())
-        {
-            if (itemstack != null)
-            {
-                if (itemstack.getItem() instanceof ItemFood)
-                {
+        if(this.isTamed()) {
+            if(itemstack != null) {
+                if(itemstack.getItem() instanceof ItemFood) {
                     ItemFood itemfood = (ItemFood)itemstack.getItem();
 
-                    if (itemfood.isWolfsFavoriteMeat() && this.dataWatcher.getWatchableObjectFloat(18) < 20.0F)
-                    {
-                        if (!player.capabilities.isCreativeMode)
-                        {
-                            --itemstack.stackSize;
+                    if(itemfood.isWolfsFavoriteMeat() && ((Float)this.dataManager.get(DATA_HEALTH_ID)).floatValue() < 20.0F) {
+                        if(!player.capabilities.isCreativeMode) {
+                            itemstack.shrink(1);
                         }
 
                         this.heal(itemfood.getHealAmount(itemstack));
 
-                        if (itemstack.stackSize <= 0)
-                        {
+                        if(itemstack.getCount() <= 0) {
                             player.inventory.setInventorySlotContents(player.inventory.currentItem, (ItemStack)null);
                         }
 
                         return true;
                     }
                 }
-                else if (itemstack.getItem() == Items.dye)
-                {
+                else if(itemstack.getItem() == Items.DYE) {
                     EnumDyeColor enumdyecolor = EnumDyeColor.byDyeDamage(itemstack.getMetadata());
 
-                    if (enumdyecolor != this.getCollarColor())
-                    {
+                    if(enumdyecolor != this.getCollarColor()) {
                         this.setCollarColor(enumdyecolor);
 
-                        if (!player.capabilities.isCreativeMode && --itemstack.stackSize <= 0)
-                        {
-                            player.inventory.setInventorySlotContents(player.inventory.currentItem, (ItemStack)null);
+                        if(!player.capabilities.isCreativeMode) {
+                            itemstack.shrink(1);
                         }
-
                         return true;
                     }
                 }
             }
 
-            if (this.isOwner(player) && !this.worldObj.isRemote && !this.isBreedingItem(itemstack))
-            {
+            if(this.isOwner(player) && !this.world.isRemote && !this.isBreedingItem(itemstack)) {
                 this.aiSit.setSitting(!this.isSitting());
                 this.isJumping = false;
-                this.navigator.clearPathEntity();
+                this.navigator.clearPath();
                 this.setAttackTarget((EntityLivingBase)null);
             }
         }
-        else if (itemstack != null && itemstack.getItem() == Items.BONE && !this.isAngry())
-        {
-            if (!player.capabilities.isCreativeMode)
-            {
-                --itemstack.stackSize;
+        else if(itemstack != null && itemstack.getItem() == Items.BONE && !this.isAngry()) {
+            if(!player.capabilities.isCreativeMode) {
+                itemstack.shrink(1);
             }
 
-            if (itemstack.stackSize <= 0)
-            {
+            if(itemstack.getCount() <= 0) {
                 player.inventory.setInventorySlotContents(player.inventory.currentItem, (ItemStack)null);
             }
 
-            if (!this.worldObj.isRemote)
-            {
-                if (this.rand.nextInt(3) == 0)
-                {
+            if(!this.world.isRemote) {
+                if(this.rand.nextInt(3) == 0) {
                     this.setTamed(true);
-                    this.navigator.clearPathEntity();
+                    this.navigator.clearPath();
                     this.setAttackTarget((EntityLivingBase)null);
                     this.aiSit.setSitting(true);
                     this.setHealth(20.0F);
-                    this.setOwnerId(player.getUniqueID().toString());
                     this.playTameEffect(true);
-                    this.worldObj.setEntityState(this, (byte)7);
-                }
-                else
-                {
+                    this.world.setEntityState(this, (byte)7);
+                } else {
                     this.playTameEffect(false);
-                    this.worldObj.setEntityState(this, (byte)6);
+                    this.world.setEntityState(this, (byte)6);
                 }
             }
 
             return true;
         }
-
-        return super.interact(player);
+        return super.processInteract(player, hand);
     }
+    
     @Override
     @SideOnly(Side.CLIENT)
-    public void handleStatusUpdate(byte id)
-    {
-        if (id == 8)
-        {
+    public void handleStatusUpdate(byte id) {
+        if(id == 8) {
             this.isShaking = true;
             this.timeWolfIsShaking = 0.0F;
             this.prevTimeWolfIsShaking = 0.0F;
-        }
-        else
-        {
+        } else {
             super.handleStatusUpdate(id);
         }
     }
 
     @SideOnly(Side.CLIENT)
-    public float getTailRotation()
-    {
-        return this.isAngry() ? 1.5393804F : (this.isTamed() ? (0.55F - (20.0F - this.dataWatcher.getWatchableObjectFloat(18)) * 0.02F) * (float)Math.PI : ((float)Math.PI / 5F));
+    public float getTailRotation() {
+        if(this.isAngry()) {
+            return 1.5393804F;
+        } else {
+            return this.isTamed() ? (0.55F - (this.getMaxHealth() - ((Float)this.dataManager.get(DATA_HEALTH_ID)).floatValue()) * 0.02F) * (float)Math.PI : ((float)Math.PI / 5F);
+        }
     }
+    
     @Override
-    public boolean isBreedingItem(ItemStack stack)
-    {
+    public boolean isBreedingItem(ItemStack stack) {
         return stack == null ? false : (!(stack.getItem() instanceof ItemFood) ? false : ((ItemFood)stack.getItem()).isWolfsFavoriteMeat());
     }
+    
     @Override
-    public int getMaxSpawnedInChunk()
-    {
+    public int getMaxSpawnedInChunk() {
         return 8;
     }
-    @Override
-    public boolean isAngry()
-    {
-        return (this.dataWatcher.getWatchableObjectByte(16) & 2) != 0;
+    
+    public boolean isAngry() {
+        return (((Byte)this.dataManager.get(TAMED)).byteValue() & 2) != 0;
     }
-    @Override
-    public void setAngry(boolean angry)
-    {
-        byte b0 = this.dataWatcher.getWatchableObjectByte(16);
 
-        if (angry)
-        {
-            this.dataWatcher.updateObject(16, Byte.valueOf((byte)(b0 | 2)));
-        }
-        else
-        {
-            this.dataWatcher.updateObject(16, Byte.valueOf((byte)(b0 & -3)));
+    public void setAngry(boolean angry) {
+        byte b0 = ((Byte)this.dataManager.get(TAMED)).byteValue();
+
+        if(angry) {
+            this.dataManager.set(TAMED, Byte.valueOf((byte)(b0 | 2)));
+        } else {
+            this.dataManager.set(TAMED, Byte.valueOf((byte)(b0 & -3)));
         }
     }
 
-    public EnumDyeColor getCollarColor()
-    {
-        return EnumDyeColor.byDyeDamage(this.dataWatcher.getWatchableObjectByte(20) & 15);
+    public EnumDyeColor getCollarColor() {
+        return EnumDyeColor.byDyeDamage(((Integer)this.dataManager.get(COLLAR_COLOR)).intValue() & 15);
     }
 
-    public void setCollarColor(EnumDyeColor collarcolor)
-    {
-        this.dataWatcher.updateObject(20, Byte.valueOf((byte)(collarcolor.getDyeDamage() & 15)));
+    public void setCollarColor(EnumDyeColor collarcolor) {
+        this.dataManager.set(COLLAR_COLOR, Integer.valueOf(collarcolor.getDyeDamage()));
     }
+    
     @Override
-    public EntityShiverwolf createChild(EntityAgeable ageable)
-    {
-        EntityShiverwolf entitywolf = new EntityShiverwolf(this.worldObj);
-        String s = this.getOwnerId();
+    public EntityShiverwolf createChild(EntityAgeable ageable) {
+    	EntityShiverwolf entitywolf = new EntityShiverwolf(this.world);
+        UUID uuid = this.getOwnerId();
 
-        if (s != null && s.trim().length() > 0)
-        {
-            entitywolf.setOwnerId(s);
+        if(uuid != null) {
+            entitywolf.setOwnerId(uuid);
             entitywolf.setTamed(true);
         }
 
         return entitywolf;
     }
 
-    public void setBegging(boolean beg)
-    {
-        if (beg)
-        {
-            this.dataWatcher.updateObject(19, Byte.valueOf((byte)1));
-        }
-        else
-        {
-            this.dataWatcher.updateObject(19, Byte.valueOf((byte)0));
-        }
+    public void setBegging(boolean beg) {
+        this.dataManager.set(BEGGING, Boolean.valueOf(beg));
     }
+
     @Override
-    public boolean canMateWith(EntityAnimal otherAnimal)
-    {
-        if (otherAnimal == this)
-        {
+    public boolean canMateWith(EntityAnimal otherAnimal) {
+        if(otherAnimal == this) {
             return false;
         }
-        else if (!this.isTamed())
-        {
+        else if(!this.isTamed()) {
             return false;
         }
-        else if (!(otherAnimal instanceof EntityShiverwolf))
-        {
+        else if(!(otherAnimal instanceof EntityShiverwolf)) {
             return false;
-        }
-        else
-        {
+        } else {
             EntityShiverwolf entitywolf = (EntityShiverwolf)otherAnimal;
             return !entitywolf.isTamed() ? false : (entitywolf.isSitting() ? false : this.isInLove() && entitywolf.isInLove());
         }
     }
 
-    public boolean isBegging()
-    {
-        return this.dataWatcher.getWatchableObjectByte(19) == 1;
+    public boolean isBegging() {
+        return ((Boolean)this.dataManager.get(BEGGING)).booleanValue();
     }
+    
     @Override
-    protected boolean canDespawn()
-    {
+    protected boolean canDespawn() {
         return !this.isTamed() && this.ticksExisted > 2400;
     }
+    
     @Override
-    public boolean shouldAttackEntity(EntityLivingBase p_142018_1_, EntityLivingBase p_142018_2_)
-    {
-        if (!(p_142018_1_ instanceof EntityCreeper) && !(p_142018_1_ instanceof EntityGhast))
-        {
-            if (p_142018_1_ instanceof EntityShiverwolf)
-            {
-                EntityShiverwolf entitywolf = (EntityShiverwolf)p_142018_1_;
+    public boolean shouldAttackEntity(EntityLivingBase e, EntityLivingBase e2) {
+        if(!(e instanceof EntityCreeper) && !(e instanceof EntityGhast)) {
+            if(e instanceof EntityShiverwolf) {
+                EntityShiverwolf entitywolf = (EntityShiverwolf)e;
 
-                if (entitywolf.isTamed() && entitywolf.getOwner() == p_142018_2_)
-                {
+                if(entitywolf.isTamed() && entitywolf.getOwner() == e2) {
                     return false;
                 }
             }
-
-            return p_142018_1_ instanceof EntityPlayer && p_142018_2_ instanceof EntityPlayer && !((EntityPlayer)p_142018_2_).canAttackPlayer((EntityPlayer)p_142018_1_) ? false : !(p_142018_1_ instanceof EntityHorse) || !((EntityHorse)p_142018_1_).isTame();
-        }
-        else
-        {
+            return e instanceof EntityPlayer && e2 instanceof EntityPlayer && !((EntityPlayer)e2).canAttackPlayer((EntityPlayer)e) ? false : !(e instanceof EntityHorse) || !((EntityHorse)e).isTame();
+        } else {
             return false;
         }
     }
 
 	@Override
-    public boolean allowLeashing()
-    {
-        return !this.isAngry() && super.allowLeashing();
+	public boolean canBeLeashedTo(EntityPlayer player) {
+        return !this.isAngry() && super.canBeLeashedTo(player);
     }
 
 	@Override
-	public String setLivingSound() {
-		return EnumSounds.EMPTY.getNonPrefixedName();
+	public EnumSounds setLivingSound() {
+		return EnumSounds.EMPTY;
 	}
 
 	@Override
-	public String setHurtSound() {
-		return EnumSounds.EMPTY.getNonPrefixedName();
+	public EnumSounds setHurtSound() {
+		return EnumSounds.EMPTY;
 	}
 
 	@Override
-	public String setDeathSound() {
-		return EnumSounds.EMPTY.getNonPrefixedName();
+	public EnumSounds setDeathSound() {
+		return EnumSounds.EMPTY;
 	}
 }
